test/classes/delete-free/anymanaged/nonnilable-anymanaged-member-no-given-value.good
nonnilable-anymanaged-member-no-given-value.chpl:2: error: Cannot default-initialize thing2: Thing2
note: non-nil class types do not support default initialization
note: Consider using the type Thing2? instead
