test/classes/delete-free/anymanaged/nonnilable-anymanaged-member-no-given-value.future
bug: anymanaged class field with no object passed to default initializer -> internal error: Unhandled type in constIntentForType()
#14379

The nilability of thing2 doesn't matter here.

If thing1 is created as new Thing1(new Thing2()), it compiles and
runs fine.

If thing2 is declared with a management class, it compiles and runs
fine if it's declared nilable, and gives an appropriate error if it's
non-nilable. (I only tried owned and unmanaged.) So it seems to
be specific to an anymanaged field.
